--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "framer-motion": "^12.23.24",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.552.0",
+    "navigation": "^6.3.0",
     "next": "15.5.5",
     "react": "19.1.0",
     "react-calendar": "^6.0.0",
+    "react-confetti": "^6.4.0",
     "react-countup": "^6.5.3",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
